| Summary: | ASTERISK-26608: Compile and link failures on OpenBSD | ||||
| Reporter: | snuffy (snuffy) | Labels: | |||
| Date Opened: | 2016-11-16 20:22:17.000-0600 | Date Closed: | 2016-11-18 08:32:16.000-0600 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Core/BuildSystem | ||
| Versions: | 13.12.2 14.1.2 GIT | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | OpenBSD 6.0 | Attachments: | |||
| Description: | There are a few issues...
* OpenBSD's {{find}} doesn't take the -delete argument so you have to pipe through {{args rm -rf}} * {{echo -e}} doesn't like {{\t}} starting a line. It just prints {{t}} which causes the libasteriskpj.exports file to be garbage. * librt doesn't exist do the link of libasteriskpj.so fails. It's not actually needed for linux anyway. * res_rtp_asterisk fails to load because of undefined symbol 'DTLS_method' * The new DNS resolver is messed up. Many constants aren't available in OpenBSD. | ||||
| Comments: | By: George Joseph (gjoseph) 2016-11-16 20:24:16.414-0600 Verified all in IRC. By: Friendly Automation (friendly-automation) 2016-11-18 08:32:17.374-0600 Change 4464 merged by zuul: build: Various OpenBSD issues [https://gerrit.asterisk.org/4464|https://gerrit.asterisk.org/4464] By: Friendly Automation (friendly-automation) 2016-11-18 08:36:27.005-0600 Change 4463 merged by Joshua Colp: build: Various OpenBSD issues [https://gerrit.asterisk.org/4463|https://gerrit.asterisk.org/4463] By: Friendly Automation (friendly-automation) 2016-11-18 12:38:28.669-0600 Change 4465 merged by Joshua Colp: build: Various OpenBSD issues [https://gerrit.asterisk.org/4465|https://gerrit.asterisk.org/4465] By: Friendly Automation (friendly-automation) 2016-11-22 11:52:02.173-0600 Change 4480 merged by zuul: Add support for older name resolving version libraries like openBSD [https://gerrit.asterisk.org/4480|https://gerrit.asterisk.org/4480] By: Friendly Automation (friendly-automation) 2016-11-22 11:55:05.382-0600 Change 4479 merged by Joshua Colp: Add support for older name resolving version libraries like openBSD [https://gerrit.asterisk.org/4479|https://gerrit.asterisk.org/4479] By: Friendly Automation (friendly-automation) 2016-12-08 07:52:46.555-0600 Change 4575 merged by Joshua Colp: tests_dns: Make DNS tests older nameser.h compatible [https://gerrit.asterisk.org/4575|https://gerrit.asterisk.org/4575] By: Friendly Automation (friendly-automation) 2016-12-08 08:09:45.343-0600 Change 4574 merged by Joshua Colp: tests_dns: Make DNS tests older nameser.h compatible [https://gerrit.asterisk.org/4574|https://gerrit.asterisk.org/4574] | ||||